[package]
name = "rollback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alkahest = { version = "0.3.0", features = ["derive"] }
byteorder = "1.4.3"
postcard = { version = "1.0.6", features = ["use-std"] }
sdl2 = "0.35.2"
serde = { version = "1.0.175", features = ["derive"] }
